upd comment-block

--- a/site/services-item.html
+++ b/site/services-item.html
@@ -503,13 +503,91 @@
                   </div>
                 </div>
               </div>
+              <div class="hide">
+                <div data-remodal-id="enter-popup" class="remodal login-popup enter-site">
+                  <h1>Вход на сайт</h1>
+                  <div class="social">
+                    <ul class="inline">
+                      <li class="in"><a href="#"> </a></li>
+                      <li class="vk"><a href="#"></a></li>
+                      <li class="fb"><a href="#"></a></li>
+                      <li class="tw"><a href="#"></a></li>
+                      <li class="od"><a href="#"></a></li>
+                      <li class="you"><a href="#"></a></li>
+                    </ul>
+                  </div>
+                  <div class="old-way">
+                    <hr/>
+                    <div class="or">или</div>
+                    <form>
+                      <div class="formgroup">
+                        <label for="login__email">Эл. почта</label>
+                        <input type="password" id="login__email" autofocus="autofocus" class="float-right"/>
+                      </div>
+                      <div class="formgroup">
+                        <label for="login__password">Пароль</label>
+                        <input type="password" id="login__password" class="float-right"/>
+                      </div>
+                      <div class="formgroup">
+                        <input type="checkbox" id="login__short-session"/>
+                        <label for="login__short-session">Чужой компьютер</label><a href="#" class="forgot-pass float-right">Забыли пароль?</a>
+                      </div>
+                      <div class="formgroup">
+                        <input type="submit" value="Войти"/>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="call-to-register">Еще не зарегистрированы? <a href="#register-popup">Регистрация</a></div>
+                </div>
+                <div data-remodal-id="register-popup" class="remodal login-popup enter-site">
+                  <h1>Регистрация</h1>
+                  <div class="social">
+                    <ul class="inline">
+                      <li class="in"><a href="#"> </a></li>
+                      <li class="vk"><a href="#"></a></li>
+                      <li class="fb"><a href="#"></a></li>
+                      <li class="tw"><a href="#"></a></li>
+                      <li class="od"><a href="#"></a></li>
+                      <li class="you"><a href="#"></a></li>
+                    </ul>
+                  </div>
+                  <div class="old-way">
+                    <hr/>
+                    <div class="or">или</div>
+                    <form>
+                      <div class="formgroup">
+                        <label for="register__name">Имя</label>
+                        <input type="password" id="register__name" autofocus="autofocus" class="float-right"/>
+                      </div>
+                      <div class="formgroup">
+                        <label for="login__email">Эл. почта</label>
+                        <input type="password" id="register__email" class="float-right"/>
+                      </div>
+                      <div class="formgroup">
+                        <label for="login__password">Пароль</label>
+                        <input type="password" id="register__password" class="float-right"/>
+                      </div>
+                      <div class="formgroup">
+                        <input type="checkbox" id="register__short-session"/>
+                        <label for="register__short-session">Чужой компьютер</label>
+                      </div>
+                      <div class="formgroup">
+                        <input type="submit" value="зарегистрироваться"/>
+                      </div>
+                      <div class="you-agree">Нажимая на кнопку «Зарегистрироваться», вы подтверждаете свое согласия с условиями предоставления услуг <br/>(<a href="#">пользовательское соглашение</a>)</div>
+                    </form>
+                  </div>
+                  <div class="call-to-register">Уже регистрировались? <a href="#enter-popup">Вход</a></div>
+                </div>
+              </div>
               <div class="box-comments">
                 <div class="bwrite">
                   <div class="bname">
-                    <h3>Комментарии к статье</h3><a href="#enter-popup">Войти</a>
+                    <h3>Комментарии
+                    </h3><a href="#enter-popup">Войти</a>
                   </div>
                   <div class="bcon">
-                    <div class="ava"><img src="img/ava.png" alt=""></div>
+                    <div class="ava"><img src="img/ava.png" alt=""/></div>
                     <div class="text">
                       <textarea placeholder=""></textarea>
                     </div>
@@ -518,7 +596,7 @@
                 </div>
                 <div class="bcomments">
                   <div class="comment">
-                    <div class="cprev"><a href="#"> <img src="img/content/ava-2.jpg" alt=""></a></div>
+                    <div class="cprev"><a href="#"> <img src="img/content/ava-2.jpg" alt=""/></a></div>
                     <div class="ccon">
                       <div class="name"><a href="#">Konrad Karlovich</a>
                         <div class="date">1 час назад</div>
@@ -527,7 +605,7 @@
                       <div class="answer"><a href="#">Ответить</a></div>
                     </div>
                     <div class="comment">
-                      <div class="cprev"><a href="#"> <img src="img/content/ava-2.jpg" alt=""></a></div>
+                      <div class="cprev"><a href="#"> <img src="img/content/ava-2.jpg" alt=""/></a></div>
                       <div class="ccon">
                         <div class="name"><a href="#">Konrad Karlovich</a>
                           <div class="pep">
@@ -540,7 +618,7 @@
                         <div class="answer"><a href="#">Ответить</a></div>
                       </div>
                       <div class="comment">
-                        <div class="cprev"><a href="#"> <img src="img/ava.png" alt=""></a></div>
+                        <div class="cprev"><a href="#"> <img src="img/ava.png" alt=""/></a></div>
                         <div class="ccon">
                           <div class="name"><a href="#">Konrad Karlovich</a>
                             <div class="date">1 час назад</div>
@@ -549,7 +627,7 @@
                           <div class="answer"><a href="#">Ответить</a></div>
                         </div>
                         <div class="comment">
-                          <div class="cprev"><a href="#"> <img src="img/content/ava-1.png" alt=""></a></div>
+                          <div class="cprev"><a href="#"> <img src="img/content/ava-1.png" alt=""/></a></div>
                           <div class="ccon">
                             <div class="name"><a href="#">Konrad Karlovich</a>
                               <div class="date">1 час назад</div>
@@ -562,7 +640,7 @@
                     </div>
                   </div>
                   <div class="comment">
-                    <div class="cprev"><a href="#"> <img src="img/ava.png" alt=""></a></div>
+                    <div class="cprev"><a href="#"> <img src="img/ava.png" alt=""/></a></div>
                     <div class="ccon">
                       <div class="name"><a href="#">Konrad Karlovich</a>
                         <div class="date">1 час назад</div>
@@ -572,7 +650,7 @@
                     </div>
                   </div>
                   <div class="comment">
-                    <div class="cprev"><a href="#"> <img src="img/content/ava-1.png" alt=""></a></div>
+                    <div class="cprev"><a href="#"> <img src="img/content/ava-1.png" alt=""/></a></div>
                     <div class="ccon">
                       <div class="name"><a href="#">Konrad Karlovich</a>
                         <div class="date">1 час назад</div>
