upd add search show more

--- a/site/search.html
+++ b/site/search.html
@@ -3,7 +3,8 @@
 <!--	Simple Communication-->
 <html>
   <head>
-    <title>ИП - Главная</title>
+    <title>ИП 
+    </title>
     <!-- Meta-->
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="favicon.png">
@@ -448,11 +449,21 @@
             </div>
             <div class="serp-result">
               <ul>
-                <li>
+                <li class="js-show-more-box">
                   <h4>В разделе «Новости»<a href="#"> (23)</a></h4>
                   <p>в рамках <span class="bold">программы</span> обновления автопарка продано более 10 тысяч автомобилей</p>
                   <p><a href="#">новые программы вернут рынок национальным производителям</a></p>
-                  <p>ученые подготовили <span class="bold">программы</span> по локализации судотроения в Росии</p><a href="#" class="show-all-link">Смотреть все</a>
+                  <p>ученые подготовили <span class="bold">программы</span> по локализации судотроения в Росии</p>
+                  <div class="row hide">
+                    <p>в рамках <span class="bold">программы</span> обновления автопарка продано более 10 тысяч автомобилей</p>
+                    <p><a href="#">новые программы вернут рынок национальным производителям</a></p>
+                    <p>ученые подготовили <span class="bold">программы</span> по локализации судотроения в Росии</p>
+                  </div>
+                  <div class="row hide">
+                    <p>в рамках <span class="bold">программы</span> обновления автопарка продано более 10 тысяч автомобилей</p>
+                    <p><a href="#">новые программы вернут рынок национальным производителям</a></p>
+                    <p>ученые подготовили <span class="bold">программы</span> по локализации судотроения в Росии</p>
+                  </div><a href="#" class="show-all-link js-show-more">Смотреть все</a>
                 </li>
                 <li>
                   <h4>В разделе «Новости»<a href="#"> (23)</a></h4>
