--- a/site/equipments-item.html
+++ b/site/equipments-item.html
@@ -3,7 +3,8 @@
 <!--	Simple Communication-->
 <html>
   <head>
-    <title>ИП - Оборудование</title>
+    <title>ИП 
+    </title>
     <!-- Meta-->
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="favicon.png">
@@ -12,10 +13,12 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/sweet-alert.css" rel="stylesheet">
+    <link href="css/jquery.remodal.css" rel="stylesheet">
     <!-- Scripts-->
     <script src="js/sweet-alert.min.js" type="text/javascript"></script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
+    <script src="js/jquery.remodal.js" type="text/javascript"></script>
     <script src="js/functions.js" type="text/javascript"></script>
   </head>
   <body>
@@ -378,6 +381,49 @@
             </div>
           </div>
         </div>
+        <div data-remodal-id="order-ok" class="remodal">
+          <div class="order-ok">Спасибо ваш заказ отправлен!</div>
+        </div>
+        <div data-remodal-id="poporder" class="remodal">
+          <div class="popedit">
+            <div class="popedit__name">Окно заказа</div>
+            <form action="#">
+              <div class="popedit__form">
+                <div class="lineedit">
+                  <div class="lineedit__name">Название<span class="req">*</span></div>
+                  <div class="lineedit__con">
+                    <input type="text" placeholder="" value="Станок токарный с ЧПУ" class="inp-field inp-field_500">
+                  </div>
+                </div>
+                <div class="lineedit">
+                  <div class="lineedit__name">Описание</div>
+                  <div class="lineedit__con">
+                    <input type="text" placeholder="" value="DELTAMAB 400" class="inp-field inp-field_500">
+                  </div>
+                </div>
+                <div class="lineedit">
+                  <div class="lineedit__name">ID заказа<span class="req">*</span></div>
+                  <div class="lineedit__con">
+                    <input type="text" placeholder="" value="Отличные" class="inp-field inp-field_full js-order-id">
+                  </div>
+                </div>
+                <div class="lineedit">
+                  <div class="lineedit__name">Контакты<span class="req">*</span></div>
+                  <div class="lineedit__con">
+                    <textarea placeholder="" class="text-field text-field_full">(заказчика) , ФИО, телефон, емаил.</textarea>
+                  </div>
+                </div>
+                <div class="lineedit">
+                  <div class="lineedit__name">Комментарий</div>
+                  <div class="lineedit__con">
+                    <textarea placeholder="" class="text-field text-field_full">Комментарий</textarea>
+                  </div>
+                </div>
+                <div class="lineedit"><a href="#order-ok" class="btn-orange-wide inline edit-save">Заказать</a></div>
+              </div>
+            </form>
+          </div>
+        </div>
         <div class="main-width main-wrap">
           <div class="pathway">
             <ul>
@@ -419,7 +465,7 @@
                 <p class="grey-without-strong"><strong>Производитель:</strong>SOMAB, Франция</p>
                 <p class="grey-without-strong"><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
               </div>
-              <div class="order-service-cont"><a href="#" class="btn-orange inline js-open-coming-soon">Заказать</a><a href="#" class="btn-grey-dashed js-show-contacts">Показать контакты</a>
+              <div class="order-service-cont"><a href="#poporder" data-order-id="id#1" class="btn-orange-wide inline js-add-order-id">Заказать</a><a href="#" class="btn-grey-dashed js-show-contacts">Показать контакты</a>
                 <div class="contacts js-contacts-box"><span class="phone">+7 495 675 87 98</span><span class="email"><a href="#">email@email.com</a></span></div>
               </div>
               <div class="bmetabot">
@@ -457,7 +503,7 @@
                           <p> <strong class="reg-black">Организация (ВУЗ / ГНЦ): </strong>ООО «Лаборатории АМФОРА»</p>
                         </div>
                         <div class="tags"><a href="#" class="tags-item js-open-coming-soon"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
-                        <div class="order-service"><a href="#" class="btn-orange">Заказать</a></div>
+                        <div class="order-service"><a href="#poporder" data-order-id="id#2" class="btn-orange js-add-order-id">Заказать</a></div>
                         <div class="imeta">
                           <div class="right mar-top-20m">
                             <div class="comments"><a href="#">51</a></div>
@@ -484,7 +530,7 @@
                           <p> <strong class="reg-black">Организация (ВУЗ / ГНЦ): </strong>ООО «Лаборатории АМФОРА»</p>
                         </div>
                         <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
-                        <div class="order-service"><a href="#" class="btn-orange">Заказать</a></div>
+                        <div class="order-service"><a href="#poporder" data-order-id="id#3" class="btn-orange js-add-order-id">Заказать</a></div>
                         <div class="imeta">
                           <div class="right mar-top-20m">
                             <div class="comments"><a href="#">51</a></div>
