--- a/site/search.html
+++ b/site/search.html
@@ -393,9 +393,9 @@
             <form name="search-form" action="/search" method="post">
               <div class="form-filter-1">
                 <input type="text" name="search-query" placeholder="Поиск">
-                <input id="radio-val-1" type="radio" name="radio" checked>
+                <input id="radio-val-1" type="radio" name="radio111" checked>
                 <label for="radio-val-1">Только в названиях</label>
-                <input id="radio-val-2" type="radio" name="radio">
+                <input id="radio-val-2" type="radio" name="radio111">
                 <label for="radio-val-2">Во всех текстах</label>
                 <div class="input-holder">
                   <input type="radio" id="all-words" name="radio-2" checked>
