--- a/site/equipments.html
+++ b/site/equipments.html
@@ -12,10 +12,12 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/sweet-alert.css" rel="stylesheet">
+    <link href="css/lightbox.css" rel="stylesheet">
     <!-- Scripts-->
     <script src="js/sweet-alert.min.js" type="text/javascript"></script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
+    <script src="js/lightbox.min.js" type="text/javascript"></script>
     <script src="js/functions.js" type="text/javascript"></script>
   </head>
   <body>
@@ -405,7 +407,7 @@
                     Названию организации<span> </span></a></div>
               </div>
               <div class="item">
-                <div class="iprev"><img src="img/content/equip-1.jpg" alt=""></div>
+                <div class="iprev"><a href="img/content/640-360-1.jpg" data-lightbox="image-1" data-title="Станок токарный с ЧПУ"><img src="img/content/equip-1.jpg" alt=""></a></div>
                 <div class="icon">
                   <div class="iname"><a href="#">Станок токарный с ЧПУ</a></div>
                   <div class="irating mar-bot-10"><span>DELTAMAB 400</span>
