--- a/site/about.html
+++ b/site/about.html
@@ -3,7 +3,8 @@
 <!--	Simple Communication-->
 <html>
   <head>
-    <title>ИП - About</title>
+    <title>ИП 
+    </title>
     <!-- Meta-->
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="favicon.png">
@@ -12,11 +13,13 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/sweet-alert.css" rel="stylesheet">
+    <link href="css/lightbox.css" rel="stylesheet">
     <link href="css/jquery.remodal.css" rel="stylesheet">
     <!-- Scripts-->
     <script src="js/sweet-alert.min.js" type="text/javascript"></script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
+    <script src="js/lightbox.min.js" type="text/javascript"></script>
     <script src="js/jquery.remodal.js" type="text/javascript"></script>
     <script src="js/functions.js" type="text/javascript"></script>
   </head>
