--- a/site/equipments.html
+++ b/site/equipments.html
@@ -13,11 +13,13 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/sweet-alert.css" rel="stylesheet">
     <link href="css/lightbox.css" rel="stylesheet">
+    <link href="css/jquery.remodal.css" rel="stylesheet">
     <!-- Scripts-->
     <script src="js/sweet-alert.min.js" type="text/javascript"></script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
     <script src="js/lightbox.min.js" type="text/javascript"></script>
+    <script src="js/jquery.remodal.js" type="text/javascript"></script>
     <script src="js/functions.js" type="text/javascript"></script>
   </head>
   <body>
