--- a/site/events-item.html
+++ b/site/events-item.html
@@ -382,6 +382,10 @@
             </div>
           </div>
         </div>
+        <script src="http://maps.googleapis.com/maps/api/js?v=3.exp&amp;amp;" type="text/javascript"></script>
+        <div data-remodal-id="modal" class="remodal remodal_map">
+          <div id="google-map" style="width:700px; height:600px;"></div>
+        </div>
         <div class="main-width main-wrap">
           <div class="pathway">
             <ul>
@@ -405,7 +409,7 @@
                   <div class="icon">
                     <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a></div>
                     <div class="address-date">
-                      <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
+                      <div class="ad-address"> <a href="#" class="js-open-map">Москва, ул. Сиреневый бульвар, д.4</a></div>
                       <div class="ad-date">27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00</div>
                     </div>
                     <div class="add-to-cal"><a href="#">Добавить в Google Calendar  </a>/ <a href="#">Добавить в календарь (*.ics)</a></div>
