--- a/site/events.html
+++ b/site/events.html
@@ -382,6 +382,10 @@
             </div>
           </div>
         </div>
+        <script src="http://maps.googleapis.com/maps/api/js?v=3.exp&amp;amp;" type="text/javascript"></script>
+        <div data-remodal-id="modal" class="remodal remodal_map">
+          <div id="google-map" style="width:700px; height:600px;"></div>
+        </div>
         <div class="main-width main-wrap">
           <div class="pathway">
             <ul>
@@ -402,7 +406,7 @@
                   <div class="imore"> <a href="#">Читать полностью</a></div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a></div>
                   <div class="address-date">
-                    <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
+                    <div class="ad-address"><a href="#" class="js-open-map">Москва, ул. Сиреневый бульвар, д.4</a></div>
                     <div class="ad-date">27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00</div>
                   </div>
                   <div class="imeta">
@@ -421,7 +425,7 @@
                   <div class="imore"> <a href="#">Читать полностью</a></div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a></div>
                   <div class="address-date">
-                    <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
+                    <div class="ad-address"><a href="#" class="js-open-map">Москва, ул. Сиреневый бульвар, д.4</a></div>
                     <div class="ad-date">27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00</div>
                   </div>
                   <div class="imeta">
@@ -445,7 +449,7 @@
                   <div class="imore"> <a href="#">Читать полностью</a></div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a></div>
                   <div class="address-date">
-                    <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
+                    <div class="ad-address"><a href="#" class="js-open-map">Москва, ул. Сиреневый бульвар, д.4</a></div>
                     <div class="ad-date">27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00</div>
                   </div>
                   <div class="imeta">
@@ -464,7 +468,7 @@
                   <div class="imore"> <a href="#">Читать полностью</a></div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a></div>
                   <div class="address-date">
-                    <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
+                    <div class="ad-address"><a href="#" class="js-open-map">Москва, ул. Сиреневый бульвар, д.4</a></div>
                     <div class="ad-date">27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00</div>
                   </div>
                   <div class="imeta">
@@ -483,7 +487,7 @@
                   <div class="imore"> <a href="#">Читать полностью</a></div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Мастер-класс</span><span class="count">43</span></a></div>
                   <div class="address-date">
-                    <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
+                    <div class="ad-address"><a href="#" class="js-open-map">Москва, ул. Сиреневый бульвар, д.4</a></div>
                     <div class="ad-date">27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00</div>
                   </div>
                   <div class="imeta">
@@ -502,7 +506,7 @@
                   <div class="imore"> <a href="#">Читать полностью</a></div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a></div>
                   <div class="address-date">
-                    <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
+                    <div class="ad-address"><a href="#" class="js-open-map">Москва, ул. Сиреневый бульвар, д.4</a></div>
                     <div class="ad-date">27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00</div>
                   </div>
                   <div class="imeta">
@@ -574,7 +578,7 @@
                   <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования.</div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a></div>
                   <div class="address-date">
-                    <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
+                    <div class="ad-address"><a href="#" class="js-open-map">Москва, ул. Сиреневый бульвар, д.4</a></div>
                     <div class="ad-date">27, 28 октября - с 14.00<br>29, 30 октября - с 10.00</div>
                   </div>
                 </div>
@@ -584,7 +588,7 @@
                   <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования.</div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">45</span></a></div>
                   <div class="address-date">
-                    <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
+                    <div class="ad-address"><a href="#" class="js-open-map">Москва, ул. Сиреневый бульвар, д.4</a></div>
                     <div class="ad-date">27, 28 октября - с 14.00<br>29, 30 октября - с 10.00</div>
                   </div>
                 </div>
@@ -594,7 +598,7 @@
                   <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования.</div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a></div>
                   <div class="address-date">
-                    <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
+                    <div class="ad-address"><a href="#" class="js-open-map">Москва, ул. Сиреневый бульвар, д.4</a></div>
                     <div class="ad-date">27, 28 октября - с 14.00<br>29, 30 октября - с 10.00</div>
                   </div>
                 </div>
