fix user drop menu

--- a/site/docs-item.html
+++ b/site/docs-item.html
@@ -365,19 +365,21 @@
               </ul>
             </div>
             <div class="user js-usermenu">
-              <div class="name"><a href="#"> 
-                  <div class="title">Алексей Петров</div>
-                  <div class="email">petrov.i1975@mail.ru</div></a></div>
-              <div class="pic">
-                <div class="ava"><img src="img/content/ava-1.png" alt=""></div>
-                <div class="count"><a href="#">9</a></div>
-                <div class="arrow"></div>
+              <div class="menu-wrap">
+                <div class="name"><a href="#"> 
+                    <div class="title">Алексей Петров</div>
+                    <div class="email">petrov.i1975@mail.ru</div></a></div>
+                <div class="pic">
+                  <div class="ava"><img src="img/content/ava-1.png" alt=""></div>
+                  <div class="count"><a href="#">9</a></div>
+                  <div class="arrow"></div>
+                </div>
               </div>
               <ul class="user-drop js-usermenu-drop">
-                <li class="user-drop__link user-drop__link_work"><a href="#">Рабочая область</a></li>
-                <li class="user-drop__link user-drop__link_request"><a href="#">Заявки</a></li>
-                <li class="user-drop__link user-drop__link_messages"><a href="#">Сообщения</a></li>
-                <li class="user-drop__link user-drop__link_notifyc"><a href="#">Уведомления<span class="count"><i>9 </i></span></a></li>
+                <li class="user-drop__link user-drop__link_work"><a href="#work">Рабочая область</a></li>
+                <li class="user-drop__link user-drop__link_request"><a href="#orders">Заявки</a></li>
+                <li class="user-drop__link user-drop__link_messages"><a href="#msg">Сообщения</a></li>
+                <li class="user-drop__link user-drop__link_notifyc"><a href="#counts">Уведомления<span class="count"><i>9 </i></span></a></li>
               </ul>
             </div>
           </div>
@@ -399,6 +401,9 @@
               <div class="bname">
                 <h1>Свидетельство о государственной  <br>регистрации программы для ЭВМ</h1>
                 <p>№ 2013610190 от 09.01.2013</p>
+              </div>
+              <div class="prev-ver-box"><a href="#">Версия №2</a>
+                <div class="prev-ver"><span>Предыдущие версии: </span><a href="#">Версия №1</a></div>
               </div>
               <p>Динамическое уравнение Эйлера, согласно третьему закону Ньютона, <br>изменяет слабоминерализованный бентос. </p>
               <div class="tags mar-bot-20"><a href="#" class="tags-item js-open-coming-soon"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item js-open-coming-soon"><span class="name">Металлообработка</span><span class="count">388</span></a></div>
