--- a/site/docs.html
+++ b/site/docs.html
@@ -367,19 +367,21 @@
               </ul>
             </div>
             <div class="user js-usermenu">
-              <div class="name"><a href="#"> 
-                  <div class="title">Алексей Петров</div>
-                  <div class="email">petrov.i1975@mail.ru</div></a></div>
-              <div class="pic">
-                <div class="ava"><img src="img/content/ava-1.png" alt=""></div>
-                <div class="count"><a href="#">9</a></div>
-                <div class="arrow"></div>
+              <div class="menu-wrap">
+                <div class="name"><a href="#"> 
+                    <div class="title">Алексей Петров</div>
+                    <div class="email">petrov.i1975@mail.ru</div></a></div>
+                <div class="pic">
+                  <div class="ava"><img src="img/content/ava-1.png" alt=""></div>
+                  <div class="count"><a href="#">9</a></div>
+                  <div class="arrow"></div>
+                </div>
               </div>
               <ul class="user-drop js-usermenu-drop">
-                <li class="user-drop__link user-drop__link_work"><a href="#">Рабочая область</a></li>
-                <li class="user-drop__link user-drop__link_request"><a href="#">Заявки</a></li>
-                <li class="user-drop__link user-drop__link_messages"><a href="#">Сообщения</a></li>
-                <li class="user-drop__link user-drop__link_notifyc"><a href="#">Уведомления<span class="count"><i>9 </i></span></a></li>
+                <li class="user-drop__link user-drop__link_work"><a href="#work">Рабочая область</a></li>
+                <li class="user-drop__link user-drop__link_request"><a href="#orders">Заявки</a></li>
+                <li class="user-drop__link user-drop__link_messages"><a href="#msg">Сообщения</a></li>
+                <li class="user-drop__link user-drop__link_notifyc"><a href="#counts">Уведомления<span class="count"><i>9 </i></span></a></li>
               </ul>
             </div>
           </div>
@@ -401,7 +403,10 @@
               <div class="item">
                 <div class="file-list"><a href="#">JPG - 7 Мб</a><a href="#">PDF - 12 Мб</a></div>
                 <div class="file-desc">
-                  <div class="date">Добавлен: 13 октября 2012</div>
+                  <div class="date mar-bot-5">Добавлен: 13 октября 2012</div>
+                  <div class="date"> <a href="#">Версия №2</a>
+                    <div class="prev-ver"><span>Предыдущие версии: </span><a href="#">Версия №1</a></div>
+                  </div>
                   <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
                   <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
@@ -410,7 +415,10 @@
               <div class="item">
                 <div class="file-list"><a href="#">JPG - 7 Мб</a><a href="#">PDF - 12 Мб</a></div>
                 <div class="file-desc">
-                  <div class="date">Добавлен: 13 октября 2012</div>
+                  <div class="date mar-bot-5">Добавлен: 13 октября 2012</div>
+                  <div class="date"> <a href="#">Версия №2</a>
+                    <div class="prev-ver"><span>Предыдущие версии: </span><a href="#">Версия №1</a></div>
+                  </div>
                   <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
                   <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
@@ -419,7 +427,10 @@
               <div class="item">
                 <div class="file-list"><a href="#">JPG - 7 Мб</a><a href="#">PDF - 12 Мб</a></div>
                 <div class="file-desc">
-                  <div class="date">Добавлен: 13 октября 2012</div>
+                  <div class="date mar-bot-5">Добавлен: 13 октября 2012</div>
+                  <div class="date"> <a href="#">Версия №2</a>
+                    <div class="prev-ver"><span>Предыдущие версии: </span><a href="#">Версия №1</a></div>
+                  </div>
                   <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
                   <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
@@ -428,7 +439,10 @@
               <div class="item">
                 <div class="file-list"><a href="#">JPG - 7 Мб</a><a href="#">PDF - 12 Мб</a></div>
                 <div class="file-desc">
-                  <div class="date">Добавлен: 13 октября 2012</div>
+                  <div class="date mar-bot-5">Добавлен: 13 октября 2012</div>
+                  <div class="date"> <a href="#">Версия №2</a>
+                    <div class="prev-ver"><span>Предыдущие версии: </span><a href="#">Версия №1</a></div>
+                  </div>
                   <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
                   <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
                 </div>
@@ -436,16 +450,10 @@
               <div class="item">
                 <div class="file-list"><a href="#">JPG - 7 Мб</a><a href="#">PDF - 12 Мб</a></div>
                 <div class="file-desc">
-                  <div class="date">Добавлен: 13 октября 2012</div>
-                  <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
-                  <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
-                  <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="file-list"><a href="#">JPG - 7 Мб</a><a href="#">PDF - 12 Мб</a></div>
-                <div class="file-desc">
-                  <div class="date">Добавлен: 13 октября 2012</div>
+                  <div class="date mar-bot-5">Добавлен: 13 октября 2012</div>
+                  <div class="date"> <a href="#">Версия №2</a>
+                    <div class="prev-ver"><span>Предыдущие версии: </span><a href="#">Версия №1</a></div>
+                  </div>
                   <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
                   <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
@@ -454,7 +462,10 @@
               <div class="item">
                 <div class="file-list"><a href="#">JPG - 7 Мб</a><a href="#">PDF - 12 Мб</a></div>
                 <div class="file-desc">
-                  <div class="date">Добавлен: 13 октября 2012</div>
+                  <div class="date mar-bot-5">Добавлен: 13 октября 2012</div>
+                  <div class="date"> <a href="#">Версия №2</a>
+                    <div class="prev-ver"><span>Предыдущие версии: </span><a href="#">Версия №1</a></div>
+                  </div>
                   <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
                   <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
@@ -463,7 +474,22 @@
               <div class="item">
                 <div class="file-list"><a href="#">JPG - 7 Мб</a><a href="#">PDF - 12 Мб</a></div>
                 <div class="file-desc">
-                  <div class="date">Добавлен: 13 октября 2012</div>
+                  <div class="date mar-bot-5">Добавлен: 13 октября 2012</div>
+                  <div class="date"> <a href="#">Версия №2</a>
+                    <div class="prev-ver"><span>Предыдущие версии: </span><a href="#">Версия №1</a></div>
+                  </div>
+                  <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
+                  <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="file-list"><a href="#">JPG - 7 Мб</a><a href="#">PDF - 12 Мб</a></div>
+                <div class="file-desc">
+                  <div class="date mar-bot-5">Добавлен: 13 октября 2012</div>
+                  <div class="date"> <a href="#">Версия №2</a>
+                    <div class="prev-ver"><span>Предыдущие версии: </span><a href="#">Версия №1</a></div>
+                  </div>
                   <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
                   <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
