--- a/site/monitoring-group.html
+++ b/site/monitoring-group.html
@@ -368,19 +368,21 @@
               </ul>
             </div>
             <div class="user js-usermenu">
-              <div class="name"><a href="#"> 
-                  <div class="title">Алексей Петров</div>
-                  <div class="email">petrov.i1975@mail.ru</div></a></div>
-              <div class="pic">
-                <div class="ava"><img src="img/content/ava-1.png" alt=""></div>
-                <div class="count"><a href="#">9</a></div>
-                <div class="arrow"></div>
+              <div class="menu-wrap">
+                <div class="name"><a href="#"> 
+                    <div class="title">Алексей Петров</div>
+                    <div class="email">petrov.i1975@mail.ru</div></a></div>
+                <div class="pic">
+                  <div class="ava"><img src="img/content/ava-1.png" alt=""></div>
+                  <div class="count"><a href="#">9</a></div>
+                  <div class="arrow"></div>
+                </div>
               </div>
               <ul class="user-drop js-usermenu-drop">
-                <li class="user-drop__link user-drop__link_work"><a href="#">Рабочая область</a></li>
-                <li class="user-drop__link user-drop__link_request"><a href="#">Заявки</a></li>
-                <li class="user-drop__link user-drop__link_messages"><a href="#">Сообщения</a></li>
-                <li class="user-drop__link user-drop__link_notifyc"><a href="#">Уведомления<span class="count"><i>9 </i></span></a></li>
+                <li class="user-drop__link user-drop__link_work"><a href="#work">Рабочая область</a></li>
+                <li class="user-drop__link user-drop__link_request"><a href="#orders">Заявки</a></li>
+                <li class="user-drop__link user-drop__link_messages"><a href="#msg">Сообщения</a></li>
+                <li class="user-drop__link user-drop__link_notifyc"><a href="#counts">Уведомления<span class="count"><i>9 </i></span></a></li>
               </ul>
             </div>
           </div>
