--- a/site/main.html
+++ b/site/main.html
@@ -383,7 +383,8 @@
                 <li class="user-drop__link user-drop__link_work"><a href="#work">Рабочая область</a></li>
                 <li class="user-drop__link user-drop__link_request"><a href="#orders">Заявки</a></li>
                 <li class="user-drop__link user-drop__link_messages"><a href="#msg">Сообщения</a></li>
-                <li class="user-drop__link user-drop__link_notifyc"><a href="#counts">Уведомления<span class="count"><i>9 </i></span></a></li>
+                <li class="user-drop__link user-drop__link_notify"><a href="#counts">Уведомления<span class="count"><i>9 </i></span></a></li>
+                <li class="user-drop__link user-drop__link_exit"><a href="#msg">Выход</a></li>
               </ul>
             </div>
           </div>
@@ -824,18 +825,34 @@
               <div class="bname">
                 <h3><a href="#">События</a></h3>
               </div>
-              <div class="bcon">
-                <div class="item">
-                  <div class="idate">09.09 ></div>
-                  <div class="iname"> <a href="#">Конференция по промышленному дизайну</a></div>
+              <div class="bcon animate-height js-news-cal">
+                <div class="items month-09 month-01 month-02 month-03 month-04 month-05 month-06 month-07">
+                  <div class="item">
+                    <div class="idate">09.09 ></div>
+                    <div class="iname"> <a href="#">Конференция по промышленному дизайну</a></div>
+                  </div>
+                  <div class="item">
+                    <div class="idate">18.09 ></div>
+                    <div class="iname"> <a href="#">Конкурс проектов в области энергосбережения</a></div>
+                  </div>
+                  <div class="item">
+                    <div class="idate">22.09 ></div>
+                    <div class="iname"> <a href="#">Конкурс проектов в области энергосбережения</a></div>
+                  </div>
                 </div>
-                <div class="item">
-                  <div class="idate">18.09 ></div>
-                  <div class="iname"> <a href="#">Конкурс проектов в области энергосбережения</a></div>
-                </div>
-                <div class="item">
-                  <div class="idate">22.09 ></div>
-                  <div class="iname"> <a href="#">Конкурс проектов в области энергосбережения</a></div>
+                <div class="items month-10 hide">
+                  <div class="item">
+                    <div class="idate">09.10 ></div>
+                    <div class="iname"> <a href="#">Конференция по промышленному дизайну</a></div>
+                  </div>
+                  <div class="item">
+                    <div class="idate">18.10 ></div>
+                    <div class="iname"> <a href="#">Конкурс проектов в области энергосбережения</a></div>
+                  </div>
+                  <div class="item">
+                    <div class="idate">22.10 ></div>
+                    <div class="iname"> <a href="#">Конкурс проектов в области энергосбережения</a></div>
+                  </div>
                 </div>
               </div>
               <div class="calendar-wrap">
