--- a/site/results.html
+++ b/site/results.html
@@ -379,7 +379,8 @@
                 <li class="user-drop__link user-drop__link_work"><a href="#work">Рабочая область</a></li>
                 <li class="user-drop__link user-drop__link_request"><a href="#orders">Заявки</a></li>
                 <li class="user-drop__link user-drop__link_messages"><a href="#msg">Сообщения</a></li>
-                <li class="user-drop__link user-drop__link_notifyc"><a href="#counts">Уведомления<span class="count"><i>9 </i></span></a></li>
+                <li class="user-drop__link user-drop__link_notify"><a href="#counts">Уведомления<span class="count"><i>9 </i></span></a></li>
+                <li class="user-drop__link user-drop__link_exit"><a href="#msg">Выход</a></li>
               </ul>
             </div>
           </div>
