--- a/site/reports.html
+++ b/site/reports.html
@@ -14,12 +14,15 @@
     <link href="css/sweet-alert.css" rel="stylesheet">
     <link href="css/lightbox.css" rel="stylesheet">
     <link href="css/jquery.remodal.css" rel="stylesheet">
+    <link href="css/jquery.datetimepicker.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
     <!-- Scripts-->
     <script src="js/sweet-alert.min.js" type="text/javascript"></script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
     <script src="js/lightbox.min.js" type="text/javascript"></script>
     <script src="js/jquery.remodal.js" type="text/javascript"></script>
+    <script src="js/jquery.datetimepicker.js" type="text/javascript"></script>
     <script src="js/jquery.easypiechart.min.js" type="text/javascript"></script>
     <script src="js/functions.js" type="text/javascript"></script>
   </head>
@@ -386,6 +389,48 @@
             </div>
           </div>
         </div>
+        <div data-remodal-id="report-add" class="remodal">
+          <div class="popedit">
+            <div class="popedit__name">
+               
+              Построить отчет
+              <div class="desc">о добавлении новых объектов каталогизации</div>
+            </div>
+            <div class="popedit__form">
+              <div class="lineedit">
+                <div class="mar-bot-20">
+                  <input id="radio-s-1" type="radio" name="radio" checked class="inp-radio inp-radio-block">
+                  <label for="radio-s-1">за выбранный промежуток времени</label>
+                </div>
+                <div class="mar-bot-20">
+                  <input id="radio-s-2" type="radio" name="radio" class="inp-radio inp-radio-block">
+                  <label for="radio-s-2">по областям</label>
+                </div>
+              </div>
+              <div class="lineedit">
+                <div class="select-wrap">
+                  <input type="hidden" name="" value="">
+                  <div class="select"><span class="title">Области</span><span class="arrow"></span></div>
+                  <ul class="option-list">
+                    <li data-value="1">Автоматизация</li>
+                    <li data-value="2">Биомедицинские материалы </li>
+                    <li data-value="3">Биомедицинские полимерные материалы </li>
+                    <li data-value="4">Геодезия</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="lineedit">
+                <div class="date-period"> 
+                  <div class="inline">За следующий период:</div><span class="inline">с</span>
+                  <input type="text" placeholder="дата от" class="inline js-calendar-widget calendar-widget-pop inp-text_sm"><a href="#" class="js-open-cal cal"></a><span class="inline">до</span>
+                  <input type="text" placeholder="дата до" class="inline js-calendar-widget calendar-widget-pop2 inp-text_sm"><a href="#" class="js-open-cal cal"></a>
+                  <div class="days"><a href="#change" class="js-change-dates">вчера		</a><a href="#change" class="js-change-dates">неделю		</a><a href="#change" class="js-change-dates">месяц		</a><a href="#change" class="js-change-dates">все время		</a></div>
+                </div>
+              </div>
+              <div class="lineedit"><a href="#" class="btn-orange-wide inline">Построить отчет</a></div>
+            </div>
+          </div>
+        </div>
         <div class="main-width main-wrap">
           <div class="organ-info">
             <div class="prev"><img src="img/content/pic.png" alt=""></div>
@@ -622,7 +667,7 @@
               <div class="ball"><a href="#">Все отчеты</a></div>
             </div>
             <div class="boxside-btns">
-              <div class="btn-reports"><a href="#" class="btn-orange-big">Построить отчет</a></div>
+              <div class="btn-reports"><a href="#report-add" class="btn-orange-big">Построить отчет</a></div>
             </div>
           </div>
         </div>
